--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,10 +6,44 @@
   --gray: #e8e8e8;
   --white: #fff;
   --blue: #0050b3;
-  --red : #ff4d4f;
+  --red: #ff4d4f;
 }
 
 @import url("https://fonts.cdnfonts.com/css/sf-pro-display");
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
+}
+
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
+}
 
 body {
   color: #333;
