--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,8 +4,11 @@
 
 :root {
   --gray: #e8e8e8;
+  --gray-text: #8C8C8C;
+  --gray-light: #f0f2f5;
   --white: #fff;
   --blue: #0050b3;
+  --dark-blue: #003a8c;
   --red: #ff4d4f;
 }
 
@@ -48,14 +51,25 @@ h6 {
 body {
   color: #333;
   font-family: "SF Pro Display", sans-serif;
+  overflow-x: hidden;
 }
 
-header .links .login p::before {
-  content: "";
+.main-nav .switcher-language .language::before {
+  content: '';
+  width: 32px;
+  height: 44px;
   display: block;
-  background: url("/icons/user.svg") no-repeat;
-  width: 25px;
-  height: 25px;
+  background: url(/flag-vi.png) no-repeat center center;
+  background-size: auto 32px;
+  overflow: hidden;
   float: left;
-  margin-right: 2px;
+  margin-right: 10px;
+}
+
+.swiper-horizontal > .swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal {
+  bottom: -50px;
+}
+
+#main-slider {
+  overflow-y: visible; 
 }
