--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -76,19 +76,23 @@ body {
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
-  .container {
-    max-width: 100%;
-    padding: 0 15px;
-  }
 }
 
 @media (min-width: 481px) and (max-width: 768px) {
+}
+
+@media (min-width: 320px) and (max-width: 768px) {
   .container {
     max-width: 100%;
     padding: 0 15px;
   }
-}
 
-/* .categories .item:nth-child(n+5) {
-  display: none;
-} */
+  .categories .item:nth-child(n + 5) {
+    display: none;
+  }
+
+  .categories .active.item:nth-child(n + 5) {
+    display: flex;
+    margin-bottom: 25px;
+  }
+}
