update popper wrapper

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,7 @@
   --gray-light: #f0f2f5;
   --white: #fff;
   --blue: #0050b3;
+  --blue-text: #096dd9;
   --dark-blue: #003a8c;
   --red: #ff4d4f;
 }
