--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -80,3 +80,30 @@ body {
 #main-slider {
   overflow-y: visible;
 }
+
+
+/* responsive */
+
+@media (min-width: 320px) and (max-width: 480px) {
+}
+
+@media (min-width: 481px) and (max-width: 768px) {
+}
+
+@media (min-width: 320px) and (max-width: 768px) {
+  .container {
+    max-width: 100%;
+    padding: 0 15px;
+  }
+
+  .categories .item:nth-child(n + 5) {
+    display: none;
+  }
+
+  .categories .active.item:nth-child(n + 5) {
+    display: flex;
+    margin-bottom: 25px;
+  }
+}
+
+/* end responsive */
